--- a/clone-netflix/css/style.css
+++ b/clone-netflix/css/style.css
@@ -12,7 +12,7 @@
 /*elementos base*/
 body{
     background: var(--preta);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial', Times, serif;
     color: white;
 }
 
@@ -74,8 +74,7 @@ header nav a:hover{
 
     padding: 15px 30px;
     margin-right: 15px;
-    font-size: 12px;
-    margin-bottom: 80px;
+    font-size: 12px;    
 
     cursor: pointer;
     transition: .3s ease all;
@@ -102,4 +101,8 @@ header nav a:hover{
    height: 100%; 
    width: 100%;
    display: block;
+}
+
+.carrosel-filmes{
+    margin-top: 5px;
 }
