--- a/clone-netflix/css/style.css
+++ b/clone-netflix/css/style.css
@@ -106,3 +106,11 @@ header nav a:hover{
 .carrosel-filmes{
     margin-top: 5px;
 }
+
+.rodape{
+    margin-top: 30px;
+    text-align: center;
+    font-size: 12px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-bottom: 25px;
+}
